--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,8 +1,8 @@
 name: Generate Snake Animation
 
 on:
-  schedule: # Executa a cada 12 horas
-    - cron: "0 */12 * * *"
+  schedule:
+    - cron: "0 */12 * * *" # Executa a cada 12 horas
 
   workflow_dispatch:
 
